# traffic-simulation

./: .gitignore  README.md  dispatcher.py  entities.py  logger.py  main.ipynb  main.py  model.py  parameters.py  pyproject.toml  run_visualization.py  visualizer.py
notebooks/: avg_speed.ipynb  avg_speed_test.csv  avg_speed_test_100.csv  avg_speed_test_50.csv  break_probability.ipynb  break_test.csv  injection_rate.ipynb  injection_test.csv  p_red_analysis.ipynb  p_red_test.csv  p_red_test_old.csv  skid_probability.ipynb  skid_test.csv  vmax_analysis.ipynb  vmax_test.csv  vmax_test_old.csv
