[project]
name = "traffic-simulation"
version = "0.1.0"
description = "Traffic intersection simulation using Nagel-Schreckenberg model"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
